# tar-stream-etl

./: .gitignore  LICENSE  README.md  pyproject.toml
tar_stream_etl/: __init__.py  engine.py
