[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tar-stream-etl"
version = "1.1.2"
description = "High-performance streaming ETL for massive TAR archives"
authors = [{name = "faihaj"}]
dependencies = [
    "requests>=2.25.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/FaIhAjAlAmToPu/tar-stream-etl"
